--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- Učitavanje stilizacije stranice. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <link rel="stylesheet" href="fancy.css">
   </head>
 
   <body>
@@ -38,19 +39,28 @@
         Latinično-glagoljični i glagoljično-latinični transkriptor
       </h1>
 
-      <!-- Napomene. -->
-      <div id="napomena">
+      <!-- Informacije. -->
+      <div id="info">
         <p>
-          Neka se slova s latinice na glagoljicu ne zadaju <em>stvarno</em> latiničnim slovima, nego slovima iz grčkog alfabeta ili ćirilice. To je zato što neki glasovi naprosto nemaju odgovarajuću reprezentaciju u latinici.
+          Neka se slova s latinice na glagoljicu ne zadaju <em>stvarno</em> latiničnim slovima, nego slovima iz grčkog alfabeta ili ćirilice.
+          To je zato što neki glasovi naprosto nemaju odgovarajuću reprezentaciju u latinici.
         </p>
         <p>
-          Slova se s latinice na glagoljicu mogu zadati i nazivom, ali omeđen kosim crtama: na primjer, unos <em>/jat/</em> s latinice se na glagoljicu transkribira kao <em>&#x2c51;</em> (unos <em>/Jat/</em> pak rezultira velikim slovom jat) &mdash; to je inspirirano fonetskom notacijom, ali u suprotnom smjeru (umjesto umetanja fonetskog znaka unutar kosih crta kao demonstracija kako se taj znak čita, u kose crte umeće se naziv tog znaka koji je u stvari ponekad kudikamo jednostavniji za napisati na tipkovnici). Također, alternativna varijanta nekog slova (ako ona postoji) može se dohvatiti umetanjem tog slova u uglate zagrade: na primjer, unos <em>[m]</em> transkribira se s latinice na glagoljicu kao <em>&#x2c5e;</em>. Moguća je i kombinacija ovih unosa, ali kose crte <strong>moraju</strong> biti s vanjske strane: <em>/[mislite]/</em> je ispravno, ali <em>[/mislite/]</em> nije. Za unos kosih crta, uglatih zagrada (a stoga i kosih crta u drugu stranu), s latinice na glagoljicu tim znakovima mora neposredno prethoditi znak <em>\</em>: <em>\/</em> za <em>/</em>, <em>\[</em> i <em>\]</em> za <em>[</em> i <em>]</em>, <em>\\</em> za <em>\</em>. Unutar međa kosih crta odnosno uglatih zagrada, doduše, umetanje znaka <em>\</em> nije potrebno (u stvari se on čita upravo kao taj znak) &mdash; zato nije moguće da, na primjer, naziv glagoljskog slova sadrži znak <em>/</em> jer se čitanjem tog znaka prestaje čitati naziv slova.
+          Slova se s latinice na glagoljicu mogu zadati i nazivom, ali omeđenim kosim crtama: na primjer, unos <em>/jat/</em> s latinice se na glagoljicu transkribira kao <em>&#x2c51;</em> (unos <em>/Jat/</em> pak rezultira velikim slovom jat) &mdash; to je inspirirano fonetskom notacijom, ali u suprotnom smjeru (umjesto umetanja fonetskog znaka unutar kosih crta kao demonstracija kako se taj znak čita, u kose crte umeće se naziv tog znaka koji je u stvari ponekad kudikamo jednostavniji za napisati na tipkovnici).
+          Također, alternativna varijanta nekog glagoljičnog slova (ako ona postoji) može se dohvatiti umetanjem tog slova u uglate zagrade: na primjer, unos <em>[m]</em> transkribira se s latinice na glagoljicu kao <em>&#x2c5e;</em>.
+          Moguća je i kombinacija ovih unosa, ali kose crte <strong>moraju</strong> biti s vanjske strane: <em>/[mislite]/</em> je ispravno, ali <em>[/mislite/]</em> nije.
+          Za unos kosih crta, uglatih zagrada (a stoga i kosih crta u drugu stranu), s latinice na glagoljicu tim znakovima mora neposredno prethoditi znak <em>\</em>: <em>\/</em> za <em>/</em>, <em>\[</em> i <em>\]</em> za <em>[</em> i <em>]</em>, <em>\\</em> za <em>\</em>.
+          Unutar međa kosih crta odnosno uglatih zagrada, doduše, umetanje znaka <em>\</em> nije potrebno (u stvari se on čita doslovno kao taj znak) &mdash; zato nije moguće da, na primjer, naziv glagoljičnog slova sadrži znak <em>/</em> jer se čitanjem tog znaka prestaje čitati naziv slova.
         </p>
         <p>
-          Glagoljica koristi drugačiji sustav zapisa brojeva i zapravo se koriste glagoljična slova za prikaz brojki. Znamenke se, doduše, s latinice na glagoljicu ne <em>parsiraju</em> i ne prepisuju u odgovarajući zapis broja na glagoljici, a također se ni u suprotnom smjeru glagoljična slova ne tretiraju kao zapis brojeva, nego nužno kao prikaz slova. U stvari, znamenke u oba pisma priapdaju u <em>neprepoznate znakove</em> koji nisu ništa drugo doli znakovi koji nemaju dvije različite varijante u ta dva pisma &mdash; ponekad je to sasvim normalna i očekivana stvar (na primjer, kod interpunkcijskih znakova), a ponekad to rezultira neobičnom transkripcijom (slovo <em>q</em> s latinice na glagoljicu samo će se prepisati). Svi se prepoznati znakovi (ili njihova kombinacija u svrsi naredbe, kao <em>/jat/</em>) prepisuju u točno jedan znak, stoga transkripcija u oba smjera rezultira tekstom ne (strogo) duljim nego izvorni tekst.
+          Glagoljica koristi drugačiji sustav zapisa brojeva i zapravo se koriste glagoljična slova za prikaz brojki.
+          Znamenke se, doduše, s latinice na glagoljicu ne <em>parsiraju</em> i ne prepisuju u odgovarajući zapis broja na glagoljici, a također se ni u suprotnom smjeru glagoljična slova ne tretiraju kao zapis brojeva, nego nužno kao prikaz slova.
+          U stvari, znamenke u oba pisma priapdaju u <em>neprepoznate znakove</em> koji nisu ništa drugo doli znakovi koji nemaju dvije različite varijante u ta dva pisma &mdash; ponekad je to sasvim normalna i očekivana stvar (na primjer, kod interpunkcijskih znakova), a ponekad to rezultira neobičnom transkripcijom (na primjer, slovo <em>q</em> s latinice na glagoljicu samo će se prepisati).
+          Svi se prepoznati znakovi (ili njihova kombinacija u svrsi naredbe, kao <em>/jat/</em>) prepisuju u točno jedan znak, stoga transkripcija u oba smjera rezultira tekstom ne strogo duljim nego izvorni tekst.
         </p>
         <p>
-          Trenutno nedostaje tablica glagoljičnih slova s njihovim nazivima i latiničnim (odnosno grčko-alfabetskim i ćiriličnim) ekvivalentima. To tek treba napraviti.
+          Trenutno nedostaje tablica glagoljičnih slova s njihovim nazivima i latiničnim (odnosno grčko-alfabetskim i ćiriličnim) ekvivalentima.
+          To tek treba napraviti.
         </p>
       </div>
     </header>
@@ -76,7 +86,7 @@
           <tbody>
             <tr>
               <td colspan="3">
-                <textarea name="tekst" rows="6" cols="80" id="latinica" form="transkripcija"></textarea>
+                <textarea name="text" rows="6" cols="80" id="latinica" form="transkripcija"></textarea>
               </td>
             </tr>
             <tr>
@@ -94,7 +104,7 @@
             </tr>
             <tr>
               <td colspan="3">
-                <textarea name="tekst" rows="6" cols="80" id="glagoljica" form="transkripcija"></textarea>
+                <textarea name="text" rows="6" cols="80" id="glagoljica" form="transkripcija"></textarea>
               </td>
             </tr>
             <tr id="redak-greska">
@@ -108,7 +118,7 @@
 
     <!-- Dno stranice. -->
     <footer>
-      Zadnja promjena: 2019-05-06, <a href="mailto:davor.penzar@gmail.com">Davor Penzar &lt;davor.penzar@gmail.com&gt;</a>
+      Zadnja promjena: 2019-05-13, <a href="mailto:davor.penzar@gmail.com">Davor Penzar &lt;davor.penzar@gmail.com&gt;</a>
     </footer>
 
     <!-- Učitavanje JS skripte dinamočnog dijela stranice. -->
