--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<tbody>
 						<tr>
 							<td colspan="3">
-								<textarea name="text" rows="6" cols="80" id="latinica" form="transkripcija"></textarea>
+								<textarea name="text" id="latinica" form="transkripcija"></textarea>
 							</td>
 						</tr>
 						<tr>
@@ -104,7 +104,7 @@
 						</tr>
 						<tr>
 							<td colspan="3">
-								<textarea name="text" rows="6" cols="80" id="glagoljica" form="transkripcija"></textarea>
+								<textarea name="text" id="glagoljica" form="transkripcija"></textarea>
 							</td>
 						</tr>
 						<tr id="redak-greska">
