--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 
 <!--
-	HTML kod statičkog dijela stranice.
+	HTML kôd statičkog dijela stranice.
 
 	Slanje i dohvaćanje teksta za transkripciju realizirano je dinamički pomoću JS skripte.
 
 -->
 
 <html lang="hr" dir="ltr">
+
 	<head>
+
 		<!-- Postsavljanje kodiranja znakova na UTF-8. -->
 		<meta charset="UTF-8">
 
@@ -18,6 +20,7 @@
 		<!-- Postavljanje opisa, ključnih rijeci i autora stranice. -->
 		<meta name="description" content="Latinično-glagoljični i glagoljično-latinični transkriptor">
 		<meta name="keywords" content="latinica, glagoljica, pismo, transkripcija">
+		<meta name="author" content="Davor Penzar">
 		<meta name="developer" content="Davor Penzar">
 
 		<!-- Učitavanje vanjskih JS skripti. -->
@@ -29,44 +32,48 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 		<link rel="stylesheet" href="fancy.css">
+
 	</head>
 
 	<body>
+
 		<!-- Naslovni dio stranice. -->
-		<header>
+		<header class="container container-fluid mt-3">
+
 			<!-- Naslov. -->
-			<h1>
+			<h1 class="h1">
 				Latinično-glagoljični i glagoljično-latinični transkriptor
 			</h1>
 
 			<!-- Informacije. -->
 			<div id="info">
-				<p>
+				<p class="text-justify">
 					Neka se slova s latinice na glagoljicu ne zadaju <em>stvarno</em> latiničnim slovima, nego slovima iz grčkog alfabeta ili ćirilice.
 					To je zato što neki glasovi naprosto nemaju odgovarajuću reprezentaciju u latinici.
 				</p>
-				<p>
+				<p class="text-justify">
 					Slova se s latinice na glagoljicu mogu zadati i nazivom, ali omeđenim kosim crtama: na primjer, unos <em>/jat/</em> s latinice se na glagoljicu transkribira kao <em>&#x2c51;</em> (unos <em>/Jat/</em> pak rezultira velikim slovom jat)&mdash;to je inspirirano fonetskom notacijom, ali u suprotnom smjeru (umjesto umetanja fonetskog znaka unutar kosih crta kao demonstracija kako se taj znak čita, u kose crte umeće se naziv tog znaka koji je u stvari ponekad kudikamo jednostavniji za napisati na tipkovnici).
 					Također, alternativna varijanta nekog glagoljičnog slova (ako ona postoji) može se dohvatiti umetanjem tog slova u uglate zagrade: na primjer, unos <em>[m]</em> transkribira se s latinice na glagoljicu kao <em>&#x2c5e;</em>.
 					Moguća je i kombinacija ovih unosa, ali kose crte <strong>moraju</strong> biti s vanjske strane: <em>/[mislite]/</em> je ispravno, ali <em>[/mislite/]</em> nije.
 					Za unos kosih crta, uglatih zagrada (a stoga i kosih crta u drugu stranu), s latinice na glagoljicu tim znakovima mora neposredno prethoditi znak <em>\</em>: <em>\/</em> za <em>/</em>, <em>\[</em> i <em>\]</em> za <em>[</em> i <em>]</em>, <em>\\</em> za <em>\</em>.
 					Unutar međa kosih crta odnosno uglatih zagrada, doduše, umetanje znaka <em>\</em> nije potrebno (u stvari se on čita doslovno kao taj znak)&mdash;zato nije moguće da, na primjer, naziv glagoljičnog slova sadrži znak <em>/</em> jer se čitanjem tog znaka prestaje čitati naziv slova.
 				</p>
-				<p>
+				<p class="text-justify">
 					Glagoljica koristi drugačiji sustav zapisa brojeva i zapravo se koriste glagoljična slova za prikaz brojki.
 					Znamenke se, doduše, s latinice na glagoljicu ne <em>parsiraju</em> i ne prepisuju u odgovarajući zapis broja na glagoljici, a također se ni u suprotnom smjeru glagoljična slova ne tretiraju kao zapis brojeva, nego nužno kao prikaz slova.
 					U stvari, znamenke u oba pisma priapdaju u <em>neprepoznate znakove</em> koji nisu ništa drugo doli znakovi koji nemaju dvije različite varijante u ta dva pisma&mdash;ponekad je to sasvim normalna i očekivana stvar (na primjer, kod interpunkcijskih znakova), a ponekad to rezultira neobičnom transkripcijom (na primjer, slovo <em>q</em> s latinice na glagoljicu samo će se prepisati).
 					Svi se prepoznati znakovi (ili njihova kombinacija u svrsi naredbe, kao <em>/jat/</em>) prepisuju u točno jedan znak, stoga transkripcija u oba smjera rezultira tekstom ne strogo duljim nego izvorni tekst.
 				</p>
-				<p>
+				<p class="text-justify">
 					Trenutno nedostaje tablica glagoljičnih slova s njihovim nazivima i latiničnim (odnosno grčko-alfabetskim i ćiriličnim) ekvivalentima.
 					To tek treba napraviti.
 				</p>
 			</div>
+
 		</header>
 
 		<!-- Glavni dio stranice. -->
-		<section id="glavnina">
+		<section class="container container-fluid" id="glavnina">
 			<!-- Forma za transkripciju. -->
 			<form id="transkripcija">
 				<!--
@@ -79,49 +86,53 @@
 						U prvom retku je čelija u koju se unosi tekst za transkripciju s latinice na glagoljicu i u koju se ispisuje transkripcija s glagoljice u latinicu.
 						U drugom retku su tri čelije: u lijevoj opcija za odabir smjera transkripcije s latinice na glagoljicu, u srednjoj gumb kojom se transkripcija zove i izvršava, i u desnom opcija za odabir smjera transkripcije s glagoljice na latinicu.
 						U trećem retku je čelija u koju se unosi tekst za transkripciju s glagoljice na latinicu i u koju se ispisuje transkripcija s latinice na glagoljicu.
-						U posljednjem retku je čelija u koju se ispisuje sadržaj greške koja se dogodila pri zahtijevanju transkripcije. Ako greške nema, taj se redak ne će ispisivati (realizirano dinamičnim dijelom stranice).
+						U posljednjem retku je čelija u koju se ispisuje sadržaj greške koja se dogodila pri zahtijevanju transkripcije.
+						Ako greške nema, taj se redak ne će ispisivati (realizirano dinamičnim dijelom stranice).
 
 				-->
-				<table>
-					<tbody>
-						<tr>
-							<td colspan="3">
-								<textarea name="text" id="latinica" form="transkripcija"></textarea>
-							</td>
-						</tr>
-						<tr>
-							<td id="celija-l2g">
-								<label for="l2g">latinica &gt; glagoljica</label>
-								<input name="dir" type="radio" id="l2g" />
-							</td>
-							<td id="celija-transkribiraj">
-								<input type="submit" id="transkribiraj" />
-							</td>
-							<td id="celija-g2l">
-								<input name="dir" type="radio" id="g2l" />
-								<label for="g2l">glagoljica &gt; latinica</label>
-							</td>
-						</tr>
-						<tr>
-							<td colspan="3">
-								<textarea name="text" id="glagoljica" form="transkripcija"></textarea>
-							</td>
-						</tr>
-						<tr id="redak-greska">
-							<td colspan="3" id="celija-greska">
-							</td>
-						</tr>
-					</tbody>
-				</table>
+
+				<div class="row form-row form-group">
+					<label for="latinica">Latinica</label>
+					<textarea class="form-control" name="text" id="latinica" form="transkripcija">Latinica</textarea>
+				</div>
+
+				<div class="row form-row">
+					<label for="glagoljica">Glagoljica</label>
+					<textarea class="form-control" name="text" id="glagoljica" form="transkripcija">Ⰳⰾⰰⰳⱁⰾⰼⰻⱌⰰ</textarea>
+				</div>
+
+				<div class="row form-row mt-3 mb-2">
+					<div>
+						<div class="form-check">
+							<input class="form-check-input" name="dir" type="radio" id="l2g" value="l2g" />
+							<label class="form-check-label" for="l2g">latinica &gt; glagoljica</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" name="dir" type="radio" id="g2l" value="g2l" />
+							<label class="form-check-label" for="g2l">glagoljica &gt; latinica</label>
+						</div>
+					</div>
+				</div>
+
+				<div class="row form-row">
+					<input class="btn btn-primary" type="submit" id="transkribiraj" value="Transkribiraj!" />
+				</div>
+
+				<div class="row form-row" id="redak-greska">
+					<div id="celija-greska"></div>
+				<div>
+
 			</form>
 		</section>
 
 		<!-- Dno stranice. -->
-		<footer>
-			Zadnja promjena: 2020-02-11, <a href="mailto:davor.penzar@gmail.com">Davor Penzar &lt;davor.penzar@gmail.com&gt;</a>
+		<footer class="container container-fluid mt-4 mb-3">
+			Zadnja promjena: 2021-08-06, <a href="mailto:davor.penzar@gmail.com">Davor Penzar &lt;davor.penzar@gmail.com&gt;</a>
 		</footer>
 
 		<!-- Učitavanje JS skripte dinamočnog dijela stranice. -->
 		<script src="dynamo.js"></script>
+
 	</body>
+
 </html>
